# subtitles-test

./: README.md  meson.build
src/: Application.vala
